+--------------------+
| Xfce Notify Daemon |
+--------------------+

Version 0.1.0git:

  Features:
    * Added man page for xfce4-notifyd-config from Evgeni Golov.
    * Support the 'reason' parameter of the NotificationChanged signal.
      Note that if you are using libnotify 0.4.4 or older, this will
      cause memory leaks in *applications* that use libnotify (not in
      xfce4-notifyd).  In this case, you should compile xfce4-notifyd
      passing the --enable-old-notification-closed-signature switch
      to configure.

  Bugfixes:
    * Fix ugliness with rounded corners on windows sometimes, both with
      compositing enabled and disabled.


Version 0.1.0 (24 Nov 2008):

  Initial release.  See TODO for known issues and unfinished features.

  Translations:
    * ca: Carles Muñoz Gorriz <carlesmu@internautas.org>
    * da: Per Kongstad <p_kongstad@op.pl>
    * de: Christian Dywan <christian@twotoasts.de>
    * el: Stavros Giannouris <stavrosg@hellug.gr>
    * es: Abel Martín <abel.martin.ruiz@gmail.com>
    * fi: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
    * fr: Maximilian Schleiss <maximilian@xfce.org>
    * id: Andhika Padmawan <andhika.padmawan@gmail.com>
    * nb: Terje Uriansrud <terje@uriansrud.net>
    * nl: Vincent Tunru <projects@vinnl.nl>
    * pt_PT: Nuno Miguel <nunis@netcabo.pt>
    * sq: Besnik Bleta <besnik@programeshqip.org>
    * tr: Gökmen Görgen <gkmngrgn@gmail.com>