@@ -110,6 +110,8 @@ static gboolean xfce_notify_window_motion_notify(GtkWidget *widget,
                                                  GdkEventMotion *evt);
 static gboolean xfce_notify_window_configure_event(GtkWidget *widget,
                                                    GdkEventConfigure *evt);
+static void xfce_notify_window_style_set(GtkWidget *widget,
+                                         GtkStyle *previous_style);
 
 static gboolean xfce_notify_window_expire_timeout(gpointer data);
 static gboolean xfce_notify_window_fade_timeout(gpointer data);
@@ -146,6 +148,7 @@ xfce_notify_window_class_init(XfceNotifyWindowClass *klass)
     widget_class->button_release_event = xfce_notify_window_button_release;
     widget_class->motion_notify_event = xfce_notify_window_motion_notify;
     widget_class->configure_event = xfce_notify_window_configure_event;
+    widget_class->style_set = xfce_notify_window_style_set;
 
     signals[SIG_CLOSED] = g_signal_new("closed",
                                        XFCE_TYPE_NOTIFY_WINDOW,
@@ -188,6 +191,12 @@ xfce_notify_window_class_init(XfceNotifyWindowClass *klass)
                                                                 0.0, 8.0,
                                                                 DEFAULT_BORDER_WIDTH,
                                                                 G_PARAM_READABLE));
+    gtk_widget_class_install_style_property(widget_class,
+                                            g_param_spec_boolean("summary-bold",
+                                                                 "summary bold",
+                                                                 "whether or not to display the notification summary field in bold text",
+                                                                 FALSE,
+                                                                 G_PARAM_READABLE));
 }
 
 static void
@@ -688,6 +697,27 @@ xfce_notify_window_configure_event(GtkWidget *widget,
     gtk_widget_queue_draw(widget);
 
     return ret;
+}
+
+static void
+xfce_notify_window_style_set(GtkWidget *widget,
+                             GtkStyle *previous_style)
+{
+    XfceNotifyWindow *window = XFCE_NOTIFY_WINDOW(widget);
+    gboolean summary_bold = FALSE;
+    GtkStyle *style;
+    PangoFontDescription *pfd;
+
+    gtk_widget_style_get(widget,
+                         "summary-bold", &summary_bold,
+                         NULL);
+    if(summary_bold) {
+        style = gtk_widget_get_style(window->summary);
+        pfd = pango_font_description_copy(style->font_desc);
+        pango_font_description_set_weight(pfd, PANGO_WEIGHT_BOLD);
+        gtk_widget_modify_font(window->summary, pfd);
+        pango_font_description_free(pfd);
+    }
 }
 
 
